crates/zuban_python/tests/mypylike/tests/async.test
[case await_non_awaitable]
class A:
    def __await__(self) -> int: ...
async def foo(a: A) -> None:
    await a  # E: Incompatible types in "await" (actual type "A", expected type "Awaitable[Any]")

[case await_invalid_generator_type]
class X:
    def __await__(self) -> tuple[int]: ...
async def foo() -> None:
    await X()  # E: Incompatible types in "await" (actual type "X", expected type "Awaitable[Any]")

[case async_context_should_be_correct]
import asyncio

def get_sum(number: int) -> int:
    return sum(_ for _ in range(number))

asyncio.gather(asyncio.to_thread(get_sum, 5))

[case async_task_creation_with_untyped_functions]
# From GH #242
import asyncio

async def foo():
    pass

class Bar:
    def bar(self, task: asyncio.Task):
        pass

async def main() -> None:
    task = asyncio.create_task(foo())
    bar = Bar()
    task.add_done_callback(bar.bar)

[case async_await_no_unused_coroutine_in_lambda]
# From GH #376
class MenuItem:
    def __init__(self, action):
        self.action = action

async def print_value() -> None:
    pass

MenuItem(lambda: print_value())

[case async_await_coroutine_mypy_compatible]
# flags: --mode mypy
# From GH #462

import asyncio
import functools
from abc import ABC, abstractmethod
from collections.abc import Callable, Coroutine
from typing import Any
from types import CoroutineType

def sync_to_async1[**P, R](
    func: Callable[P, R],
) -> Callable[P, Coroutine[Any, Any, R]]:
    async def run(*args: P.args, **kwargs: P.kwargs) -> R:
        return await asyncio.get_running_loop().run_in_executor(
            None, functools.partial(func, *args, **kwargs)
        )
    return run

def sync_to_async2[**P, R](
    func: Callable[P, R],
) -> Callable[P, CoroutineType[Any, Any, R]]:
    async def run(*args: P.args, **kwargs: P.kwargs) -> R:
        return await asyncio.get_running_loop().run_in_executor(
            None, functools.partial(func, *args, **kwargs)
        )
    return run  # E: Incompatible return value type (got "Callable[P, Coroutine[Any, Any, R]]", expected "Callable[P, CoroutineType[Any, Any, R]]")

class Base(ABC):
    @abstractmethod
    async def create1(self, name: str) -> int: ...
    @abstractmethod
    async def create2(self, name: str) -> int: ...

class Impl(Base):
    @sync_to_async1
    def create1(self, name: str) -> int:
        return len(name)

    @sync_to_async2
    def create2(self, name: str) -> int:
        return len(name)

[case async_await_coroutine_non_mypy_compatible]
# flags: --mode default
# From GH #462

import asyncio
import functools
from abc import ABC, abstractmethod
from collections.abc import Callable, Coroutine
from typing import Any
from types import CoroutineType

def sync_to_async1[**P, R](
    func: Callable[P, R],
) -> Callable[P, Coroutine[Any, Any, R]]:
    async def run(*args: P.args, **kwargs: P.kwargs) -> R:
        return await asyncio.get_running_loop().run_in_executor(
            None, functools.partial(func, *args, **kwargs)
        )
    return run

def sync_to_async2[**P, R](
    func: Callable[P, R],
) -> Callable[P, CoroutineType[Any, Any, R]]:
    async def run(*args: P.args, **kwargs: P.kwargs) -> R:
        return await asyncio.get_running_loop().run_in_executor(
            None, functools.partial(func, *args, **kwargs)
        )
    return run

class Base(ABC):
    @abstractmethod
    async def create1(self, name: str) -> int: ...
    @abstractmethod
    async def create2(self, name: str) -> int: ...

class Impl(Base):
    @sync_to_async1
    def create1(self, name: str) -> int:  # E: Return type "Coroutine[Any, Any, int]" of "create1" incompatible with return type "CoroutineType[Any, Any, int]" in supertype "Base"
        return len(name)

    @sync_to_async2
    def create2(self, name: str) -> int:
        return len(name)
